--- a/pingguo.plist
+++ b/pingguo.plist
@@ -11,7 +11,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>http://ds01.xyz/app/pingguo.ipa</string>
+<string>https://github.com/makadikey/douse/raw/master/pingguo.ipa</string>
 </dict>
 </array>
 <key>metadata</key>
